--- a/register.html
+++ b/register.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Student Registration</h1>
+        <h1>CDAC Registration</h1>
         <form id="registrationForm">
             <div class="form-group">
                 <label for="name">Name</label>
